--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.613.0",
+    "@aws-sdk/lib-storage": "^3.635.0",
     "@aws-sdk/s3-request-presigner": "^3.613.0",
     "argon2": "^0.40.3",
     "autoprefixer": "^10.4.19",
     "aws-sdk": "^2.1657.0",
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "morgan": "~1.9.1",
+    "mqtt": "^5.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
+    "node-mailjet": "^6.0.5",
     "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
+    "redis": "^4.7.0",
     "sharp": "^0.33.4"
   },
   "main": "src/app.js",
