--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "ffmpeg-static": "^5.2.0",
+    "firebase-admin": "^12.4.0",
     "fluent-ffmpeg": "^2.1.3",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
